# langchain-examples

./: .gitignore  01-langchain local embedding-de-en.ipynb  02-Langchain Question Answering - ChatGPT.ipynb  03-Langchain Question Answering - German Embeddings.ipynb  04-Langchain Question Answering - Evaluation.ipynb  README.md  pyproject.toml  rwkv.ipynb
.chroma/index/: id_to_uuid_3615f5c1-4d72-439b-a215-56aeafc40e03.pkl  id_to_uuid_ebc6ae74-9427-4d02-9160-9f12df1b1b05.pkl  id_to_uuid_f7047770-8b45-4b31-b3b2-760c52a0e23f.pkl  index_metadata_3615f5c1-4d72-439b-a215-56aeafc40e03.pkl  index_metadata_ebc6ae74-9427-4d02-9160-9f12df1b1b05.pkl  index_metadata_f7047770-8b45-4b31-b3b2-760c52a0e23f.pkl  uuid_to_id_3615f5c1-4d72-439b-a215-56aeafc40e03.pkl  uuid_to_id_ebc6ae74-9427-4d02-9160-9f12df1b1b05.pkl  uuid_to_id_f7047770-8b45-4b31-b3b2-760c52a0e23f.pkl
dashboard/: app2.py
evaluate-llms/: .gitignore  README.md  pyproject.toml  stats.json
evaluate-llms/conf/base/: catalog.yml  logging.yml  parameters.yml  parameters_evaluate.yml  parameters_step01_load.yml  parameters_step02_split.yml  parameters_step04_retrieve.yml  parameters_step06_converse.yml  parameters_stepz_evaluate.yml
evaluate-llms/data/: 03_message.json
evaluate-llms/data/01_raw/: webdata.json
evaluate-llms/data/02_intermediate/: split_webdata.json
evaluate-llms/src/: pyproject.toml
evaluate-one/: .gitignore  README.md  pyproject.toml  run_kedro.py  stats.json  test.py
evaluate-one/src/: pyproject.toml
mydocker/: Dockerfile  pyproject.toml  run_docker.sh  test.py
(+286 files in other folders)
