[tool.poetry]
name = "my-langchain-for-llm-application-development"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
langchain = "^0.0.276"
tiktoken = "^0.4.0"
pandas = "^2.0.2"
google-generativeai = "^0.1.0"
pypdf = "^3.9.1"
gradio = "^3.34.0"
paper-qa = "^2.1.1"
flake8 = "^6.0.0"
black = "^23.3.0"
docarray = "0.32.1"
tqdm = "^4.65.0"
chromadb = "^0.3.26"
isort = "^5.12.0"
google-search-results = "^2.4.2"
duckduckgo-search = "^3.8.3"
wikipedia = "^1.4.0"
huggingface-hub = "^0.15.1"
transformers = "^4.30.2"
sentence-transformers = "^2.2.2"
accelerate = "^0.20.3"
bitsandbytes = "^0.39.1"
xformers = "^0.0.20"
torch = "^2.0.1"
gpt4all = "^1.0.8"
protobuf = "==3.20.*"
sacremoses = "^0.0.53"
instructorembedding = "^1.0.1"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
